force-app/main/default/objects/rstk__sydatat__c/fields/vFrom_Location__c.field-meta.xml
<CustomField>
    <fullName>vFrom_Location__c</fullName>
    <label>vFrom Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>