force-app/main/default/objects/rstk__sydatat__c/fields/vItemNumber__c.field-meta.xml
<CustomField>
    <fullName>vItemNumber__c</fullName>
    <label>vItemNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>