force-app/main/default/objects/rstk__sydatat__c/fields/vTo_Location__c.field-meta.xml
<CustomField>
    <fullName>vTo_Location__c</fullName>
    <label>vTo Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>